--- a/docs/组件.md
+++ b/docs/组件.md
@@ -1,7 +1,7 @@
-Elasticsearch
+### Elasticsearch
 
 
-Kafka
+### Kafka
 详解：http://www.cnblogs.com/likehua/p/3999538.html
 
 1.为什么使用消息队列？
@@ -31,7 +31,7 @@ request.required.acks:设置为-1 等待所有ISR列表中的Replica接收到消
 min.insync.replicas: 设置为>=2,保证ISR中至少两个Replica。 
 .kafka支持Gzip/snappy等多种压缩方式
 
-Redis
+### Redis
 介绍：高性能的key-value数据库。
 Redis 与其他 key - value 缓存产品有以下三个特点：
 Redis支持数据的持久化，可以将内存中的数据保存在磁盘中，重启的时候可以再次加载进行使用。 
