--- a/docs/db/数据结构.md
+++ b/docs/db/数据结构.md
@@ -19,6 +19,9 @@
 
 由于链表是以这种方式保存数据，所以链表在插入和删除时比较容易，读取数据时比较麻烦
 
+## 堆-Heap
+堆的物理存储结构是一维数组，逻辑存储结构是完全二叉树。
+
 ## 栈-stack
 允许插入和删除的一端称为栈顶（top），另一端称为栈底（bottom）；
 
