--- a/docs/java/操作系统.md
+++ b/docs/java/操作系统.md
@@ -3,5 +3,12 @@
 
 
 # Shell脚本
-awk
-替换值
+awk:读文件
+sed替换值
+
+# 网络：
+netstat命令用来打印网络连接状况、系统所开放端口、路由表等信息
+
+常用的关于netstat的命令就是这个 netstat -lnp （打印当前系统启动哪些端口）以及 netstat -an （打印网络连接状况）
+内存：top, jmap -histo:live [pid], jmap -dump:live [pid]
+日志：tail ,head,cat
