--- a/docs/组件.md
+++ b/docs/组件.md
@@ -134,3 +134,11 @@ ZooKeeper 是高性能的。 在“读”多于“写”的应用程序中尤其
 2. 原子性： 所有事务请求的处理结果在整个集群中所有机器上的应用情况是一致的，也就是说，要么整个集群中所有的机器都成功应用了某一个事务，要么都没有应用。
 3. 单一系统映像 ： 无论客户端连到哪一个 ZooKeeper 服务器上，其看到的服务端数据模型都是一致的。
 4. 可靠性： 一旦一次更改请求被应用，更改的结果就会被持久化，直到被下一次更改覆盖。
+
+Zookeeper一致性原理：http://blog.51cto.com/welcomeweb/2103292?utm_source=oschina-app
+fastleaderelection： http://www.jasongj.com/zookeeper/fastleaderelection/
+总结
+    由于使用主从复制模式，所有的写操作都要由Leader主导完成，而读操作可通过任意节点完成，因此Zookeeper读性能远好于写性能，更适合读多写少的场景
+    虽然使用主从复制模式，同一时间只有一个Leader，但是Failover机制保证了集群不存在单点失败（SPOF）的问题
+    ZAB协议保证了Failover过程中的数据一致性
+    服务器收到数据后先写本地文件再进行处理，保证了数据的持久性
