调整目录层级

--- a/框架和组件/框架.md
+++ b/框架和组件/框架.md
@@ -34,6 +34,10 @@
 2. *如果目标类没有实现接口*，那么Spring AOP会选择使用CGLIB来动态代理目标类。CGLIB（Code Generation Library），是一个代码生成的类库，可以在运行时动态的生成指定类的一个子类对象，并覆盖其中特定方法，覆盖方法时可以添加增强代码，从而实现AOP。CGLIB是通过继承的方式做的动态代理，因此如果某个类被标记为final，那么它是无法使用CGLIB做动态代理的。
 3. 静态代理与动态代理区别在于生成AOP代理对象的时机不同，相对来说AspectJ的静态代理方式具有更好的性能，但是AspectJ需要特定的编译器进行处理，而Spring AOP则无需特定的编译器处理。 
 
+
+CGLIB详解
+https://www.jianshu.com/p/9a61af393e41?from=timeline&isappinstalled=0
+
 ## Spring管理事务
 1. 编程式事务(TransactionTemplate)，在代码中硬编码（不推荐）
 2. 声明式事务，在配置文件中配置（推荐）:声明式事务管理建立在AOP之上的。其本质是对方法前后进行拦截，然后在目标方法开始之前创建或者加入一个事务，在执行完目标方法之后根据执行情况提交或者回滚事务。
