调整目录，梳理锁的知识点

--- a/操作系统/操作系统.md
+++ b/操作系统/操作系统.md
@@ -4,16 +4,19 @@
 dstat:监控系统资源
 * 查看CPU:
 top,dstat,
-* 查看内存，I/O
-free,iostat
-查看网络带宽：
-dstat -nt
-* 查看磁盘：
-df
+* 查看内存：free,
+查看磁盘I/O： iostat
+
+查看网络带宽：dstat -nt
+
+* 查看磁盘：df
+查看磁盘当前目录：du
 * JVM内存回收：
 jstat -gcutil pid
+
 * 分析jvm内存：
  jmap -histo:live [pid], jmap -dump:live [pid]
+
 * 查看日志：
 tail ,head,cat,grep
 
