--- a/java/锁.md
+++ b/java/锁.md
@@ -3,7 +3,7 @@
 基本概念：https://www.cnblogs.com/qifengshi/p/6831055.html
 ## 1. 锁的设计
 ### 可重入锁和不可重入锁
-可重入锁又名递归锁，是指在同一个线程在外层方法获取锁的时候，在进入内层方法仍有获取锁的代码。(synchronized 和ReentrantLock都是可重入锁)
+可重入锁又名**递归锁**，是指在同一个线程在外层方法获取锁的时候，在进入内层方法仍有获取锁的代码。(synchronized 和ReentrantLock都是可重入锁)
 
 不可重入锁会造成死锁
 
@@ -40,7 +40,7 @@
 ### 偏向锁、轻量级锁、重量级锁
 >> 这三种锁是指锁的状态，并且是针对Synchronized。在Java 5通过引入锁升级的机制来实现高效Synchronized。这三种锁的状态是通过对象监视器在对象头中的字段来表明的。
 * 偏向锁是指一段同步代码一直被一个线程所访问，那么该线程会自动获取锁。降低获取锁的代价。
-* 轻量级锁是指当锁是偏向锁的时候，被另一个线程所访问，偏向锁就会升级为轻量级锁，其他线程会通过自旋的形式尝试获取锁，不会阻塞，提高性能。
+* 轻量级锁是指当锁是偏向锁的时候，被另一个线程所访问，偏向锁就会升级为轻量级锁，其他线程会通过**自旋**的形式尝试获取锁，不会阻塞，提高性能。
 * 重量级锁是指当锁为轻量级锁的时候，另一个线程虽然是自旋，但自旋不会一直持续下去，当自旋一定次数的时候，还没有获取到锁，就会进入阻塞，该锁膨胀为重量级锁。重量级锁会让其他申请的线程进入阻塞，性能降低。
 ### 自旋锁
 在Java中，自旋锁是指尝试获取锁的线程不会立即阻塞，而是采用循环的方式去尝试获取锁，这样的好处是减少线程上下文切换的消耗，缺点是循环会消耗CPU。
