--- a/java/线程.md
+++ b/java/线程.md
@@ -9,10 +9,17 @@
 # 1.线程
 http://www.cnblogs.com/dolphin0520/p/3920357.html
 
-  - 上下文切换:对于单核CPU来说，CPU在一个时刻只能运行一个线程，当在运行一个线程的过程中转去运行另一个线程，这个就做线程上下文切换。
+  - 线程调度器(Thread Scheduler):
+    线程调度器是一个操作系统服务，它负责为Runnable状态的线程分配CPU时间。一旦我们创建一个线程并启动它，它的执行便依赖于线程调度器的实现。
+    
+  - 时间分片(Time Slicing):
+    时间分片是指将可用的CPU时间分配给可用的Runnable线程的过程。分配CPU时间可以基于线程优先级或者线程等待的时间。线程调度并不受到Java虚拟机控制，所以由应用程序来控制它是更好的选择（也就是说不要让你的程序依赖于线程的优先级）。
+
+  - 上下文切换(context-switching):对于单核CPU来说，CPU在一个时刻只能运行一个线程，当在运行一个线程的过程中转去运行另一个线程，这个就做线程上下文切换。
   
   - 阻塞与等待的区别
     - 阻塞：当一个线程试图获取对象锁（非java.util.concurrent库中的锁，即synchronized），而该锁被其他线程持有，则该线程进入阻塞状态。它的**特点时使用简单，由JVM调度器来决定唤醒自己，而不需要由另一个线程来显示唤醒自己，不响应中断**。
+
     - 等待:当一个线程等待另一个线程通知调度器一个条件时，该线程进入等待状态。他的特点是**需要等待另一个线程显示的唤醒自己，实现灵活，语义更丰富，可响应中断**。例如调用：Object.wait(),Thread.join(),以及等到Lock或Condition。
   tips：虽然synchronized和JUC里的Lock都是实现锁的功能，但线程进入的状态时不一样的。*synchronized会让线程进入阻塞状态*，而JUC里的Lock时用LockSupport.part()/unpark()来实现阻塞/唤醒的，会让线程进入等待状态。
 
@@ -59,7 +66,7 @@ http://www.cnblogs.com/dolphin0520/p/3920357.html
 
 # 2.线程池
 ## 常用线程池
-JDK线程池ThreadPoolExecutor
+JDK自定义线程池ThreadPoolExecutor
 JDK定时线程池ScheduledThreadPoolExecutor
 Executors-默认线程池参数
 
@@ -167,4 +174,3 @@ Executors-默认线程池参数
 线程池的工作线程空闲后，保持存活的时间。所以如果任务很多，并且每个任务执行的时间比较短，可以调大这个时间，提高线程的利用率。
 7. TimeUnit（线程活动保持时间的单位
 可选的单位有天（DAYS），小时（HOURS），分钟（MINUTES），毫秒(MILLISECONDS)，微秒(MICROSECONDS, 千分之一毫秒)和毫微秒(NANOSECONDS, 千分之一微秒)。 
-
