--- a/java/锁.md
+++ b/java/锁.md
@@ -12,6 +12,7 @@
   - [Synchronized关键字](#synchronized%E5%85%B3%E9%94%AE%E5%AD%97)
   - [Volatile关键字](#volatile%E5%85%B3%E9%94%AE%E5%AD%97)
     - [拓展:处理器重排序和内存屏障](#%E6%8B%93%E5%B1%95%E5%A4%84%E7%90%86%E5%99%A8%E9%87%8D%E6%8E%92%E5%BA%8F%E5%92%8C%E5%86%85%E5%AD%98%E5%B1%8F%E9%9A%9C)
+    - [CAS](#cas)
     - [Synchronized和Volatile比较](#synchronized%E5%92%8Cvolatile%E6%AF%94%E8%BE%83)
   - [Lock锁](#lock%E9%94%81)
     - [Lock接口](#lock%E6%8E%A5%E5%8F%A3)
@@ -103,6 +104,7 @@
  http://ifeve.com/java-memory-model-1/
 
 ### Synchronized和Volatile比较
+ http://www.cnblogs.com/hapjin/p/5492880.html
   1. volatile轻量级，只能修饰变量；sychornized重量级，可以修饰方法和代码块；
   2. volatile只能保证数据的**可见性**，不能用来同步，因为多个线程并发访问volatile修复的变量不会阻塞；
   3. synchronized不仅能保证可见性，还能保证原子性。
@@ -120,6 +122,8 @@
 
 ### ReentrantLock类
    是唯一实现了Lock接口的类，是重入锁（即，当一个线程已经获得了锁以后，当再次访问临界资源时，可以直接获得锁，synchronized关键字也是重入锁）。 
+  - ReenTrantLock实现的原理：
+    简单来说，ReenTrantLock的实现是一种自旋锁，通过循环调用**CAS**操作来实现加锁。它的性能比较好也是因为避免了使线程进入内核态的阻塞状态。**想尽办法避免线程进入内核的阻塞状态是我们去分析和理解锁设计的关键钥匙**。
 ### ReentrantReadWriteLock类
     ReentrantReadWriteLock类实现了ReadWriteLock接口，不过该接口只有两个方法，一个是获得读锁，一个是获得写锁。
    关于读写的冲突问题，掌握此三句：**读读不冲突，读写冲突，写写冲突**。
