--- a/java/锁.md
+++ b/java/锁.md
@@ -99,8 +99,26 @@
     3. volatile 修饰的变量会**禁止指令重排序（有序性）**
 
 ### 拓展:处理器重排序和内存屏障
- // todo
- http://ifeve.com/java-memory-model-1/
+[参考] http://ifeve.com/java-memory-model-1/
+
+- 重排序
+    在执行程序时为了提高性能，编译器和处理器常常会对指令做重排序。重排序分三种类型：
+1. 编译器优化的重排序。编译器在不改变单线程程序语义的前提下，可以重新安排语句的执行顺序。
+2. 指令级并行的重排序。现代处理器采用了指令级并行技术（Instruction-Level Parallelism， ILP）来将多条指令重叠执行。如果不存在数据依赖性，处理器可以改变语句对应机器指令的执行顺序。
+3. 内存系统的重排序。由于处理器使用缓存和读/写缓冲区，这使得加载和存储操作看上去可能是在乱序执行。
+从java源代码到最终实际执行的指令序列，会分别经历下面三种重排序：
+[重排序](./pic/重排序.png)
+>> 对于编译器，JMM的编译器重排序规则会禁止特定类型的编译器重排序（不是所有的编译器重排序都要禁止）。对于处理器重排序，JMM的处理器重排序规则会要求java编译器在生成指令序列时，插入特定类型的内存屏障（memory barriers，intel称之为memory fence）指令，通过内存屏障指令来禁止特定类型的处理器重排序（不是所有的处理器重排序都要禁止）。
+- 内存屏障
+    StoreLoad Barriers是一个“全能型”的屏障，它同时具有其他三个屏障的效果。现代的多处理器大都支持该屏障（其他类型的屏障不一定被所有处理器支持）。执行该屏障开销会很昂贵，因为当前处理器通常要把写缓冲区中的数据全部刷新到内存中（buffer fully flush）。
+
+- happens-before
+    >> 程序员密切相关的happens-before规则如下：
+
+    - 程序顺序规则：一个线程中的每个操作，happens- before 于该线程中的任意后续操作。
+    - 监视器锁规则：对一个监视器锁的解锁，happens- before 于随后对这个监视器锁的加锁。
+    - volatile变量规则：对一个volatile域的写，happens- before 于任意后续对这个volatile域的读。
+    - 传递性：如果A happens- before B，且B happens- before C，那么A happens- before C。
 
 ### Synchronized和Volatile比较
  http://www.cnblogs.com/hapjin/p/5492880.html
