--- a/数据结构和算法/数据结构.md
+++ b/数据结构和算法/数据结构.md
@@ -109,10 +109,13 @@ tips: 其期望高度（即为一棵平衡树时）为log2n，其各操作的时
 * 红黑树的性质：
 红黑树是每个节点都带有颜色属性的二叉查找树，颜色为红色或黑色。在二叉查找树强制的一般要求以外，对于任何有效的红黑树我们增加了如下的额外要求:
 性质1. 节点是红色或黑色。
-性质2. 根是黑色。
-性质3. 所有叶子都是黑色（叶子是NIL节点）。
+性质2. 根节点是黑色。
+性质3. 所有叶子节点都是黑色（叶子是NIL节点，空节点）。
 性质4. 每个红色节点必须有两个黑色的子节点。(从每个叶子到根的所有路径上不能有两个连续的红色节点。)
 性质5. 从任一节点到其每个叶子的所有简单路径都包含相同数目的黑色节点。
+
+http://www.cnblogs.com/yangecnu/p/Introduce-Red-Black-Tree.html
+http://www.cnblogs.com/skywang12345/p/3245399.html
 
 ### B树：平衡多路查找树
 * B树也是一种用于查找的平衡树，但是它不是二叉树。
