完善部分知识点

--- a/操作系统/操作系统.md
+++ b/操作系统/操作系统.md
@@ -14,6 +14,9 @@ top,dstat,
 * JVM内存回收：
 jstat -gcutil pid
 
+* JVM检查死锁：
+jstat -l pid
+
 * 分析jvm内存：
  jmap -histo:live [pid], jmap -dump:live [pid]
 
