--- a/框架和组件/框架.md
+++ b/框架和组件/框架.md
@@ -3,7 +3,9 @@
     - [自动装配](#%E8%87%AA%E5%8A%A8%E8%A3%85%E9%85%8D)
   - [Spring的AOP理解-Aspect Oriented Programming](#spring%E7%9A%84aop%E7%90%86%E8%A7%A3-aspect-oriented-programming)
     - [Spring AOP名词说明](#spring-aop%E5%90%8D%E8%AF%8D%E8%AF%B4%E6%98%8E)
-  - [Spring管理事务](#spring%E7%AE%A1%E7%90%86%E4%BA%8B%E5%8A%A1)
+  - [Spring 事务](#spring-%E4%BA%8B%E5%8A%A1)
+    - [Spring管理事务](#spring%E7%AE%A1%E7%90%86%E4%BA%8B%E5%8A%A1)
+    - [Spring事务传播机制](#spring%E4%BA%8B%E5%8A%A1%E4%BC%A0%E6%92%AD%E6%9C%BA%E5%88%B6)
   - [Spring的优点](#spring%E7%9A%84%E4%BC%98%E7%82%B9)
 - [SpringBean](#springbean)
   - [一 Bean作用域（scope）](#%E4%B8%80-bean%E4%BD%9C%E7%94%A8%E5%9F%9Fscope)
@@ -17,7 +19,7 @@
 
 
 # Spring
-    Spring是一个轻量级的IOC和AOP容器框架，目的是解决企业应用开发的复杂性。
+  Spring是一个轻量级的IOC和AOP容器框架，目的是解决企业应用开发的复杂性。
 
 ## Spring的IOC理解-Inversion of Control
 1. IOC就是控制反转。当某个角色需要另外一个角色协助的时候，在传统的程序设计过程中，通常由调用者来创建被调用者的实例对象。但在spring中创建被调用者的工作不再由调用者来完成，因此称为控制反转。作用是实现了程序的解耦合，而非传统实现中，由程序代码直接操控。*BeanFactory* 是Spring IoC容器的具体实现与核心接口，提供了一个先进的配置机制，使得任何类型的对象的配置成为可能，用来包装和管理各种bean。
@@ -68,12 +70,62 @@
 CGLIB详解
 https://www.jianshu.com/p/9a61af393e41?from=timeline&isappinstalled=0
 
-## Spring管理事务
+## Spring  事务
+Spring事务的底层是Spring AOP，而Spring AOP的底层是动态代理技术;
+![事务机制](../java/pic/spring事务机制.png)
+
+### Spring管理事务
 1. 编程式事务(TransactionTemplate)，在代码中硬编码（不推荐）
 2. 声明式事务，在配置文件中配置（推荐）:声明式事务管理建立在AOP之上的。其本质是对方法前后进行拦截，然后在目标方法开始之前创建或者加入一个事务，在执行完目标方法之后根据执行情况提交或者回滚事务。
 声明式事务又分为两种：
 a、基于XML的声明式事务
+<!-- 事务管理器，对mybatis操作数据库进行事务控制，spring使用jdbc的事务控制类  -->
+    <bean id="transactionManager" class="org.springframework.jdbc.datasource.DataSourceTransactionManager">
+        <property name="dataSource" ref="dataSourceSuport"></property>
+    </bean>
+  <!-- spring 事务注解     mode="aspectj"表示采用切面    mode="proxy"表示代理模式(默认) -->
+     <tx:annotation-driven transaction-manager="transactionManager"  />  
+  <!--  通知   映射到上面的事务管理器-->
+    <tx:advice  id="txAdive"transaction-manager="transactionManager">
+        <tx:attributes>
+  <!--name什么方法名称开头  传播行为 REQUIRED必须事务   rollback-for什么异常类进行回滚，逗号隔开 -->
+            <tx:method name="save*" propagation="REQUIRED" rollback-for="java.lang.DaoException"/>
+            <tx:method name="delete*" propagation="REQUIRED" rollback-for="java.lang.DaoException"/>
+            <tx:method name="insert*" propagation="REQUIRED" rollback-for="java.lang.DaoException"/>
+            <tx:method name="update*" propagation="REQUIRED" rollback-for="java.lang.DaoException"/>
+  <!-- 不是必须的，而且查询类型为事务只读的可以提高数据库性能优化  -->
+            <tx:method name="find*" propagation="SUPPORTS"read-only="true"/>
+            <tx:method name="get*" propagation="SUPPORTS"read-only="true"/>
+            <tx:method name="select*" propagation="SUPPORTS"read-only="true"/>
+        </tx:attributes>
+    </tx:advice>
+  <!-- aop切面并配置切入点入进行事物管理 指向上面的映射 -->
+    <aop:config>
+        <aop:pointcut expression="execution(* com.service.serviceImpl.*.*(..))"id="txPointcut"/>
+        <aop:advisor advice-ref="txAdive" pointcut-ref="txPointcut"/>
+    </aop:config>
+    <aop:aspectj-autoproxy proxy-target-class="true"/>
 b、基于注解的声明式事务:@Transactional
+<!-- 事务管理器，对mybatis操作数据库进行事务控制，spring使用jdbc的事务控制类  -->
+ <bean id="transactionManager" class="org.springframework.jdbc.datasource.DataSourceTransactionManager">
+ <property name="dataSource" ref="dataSourceSuport"></property>
+ </bean>
+<!-- 开启spring 事务注解支持  mode="aspectj"表示采用切面    mode="proxy"表示代理模式(默认) -->
+  <tx:annotation-driven transaction-manager="transactionManager"  />  
+
+
+### Spring事务传播机制
+[参考](https://blog.csdn.net/zht741322694/article/details/78676964)
+
+             传播行为                                              含义
+- propagation_required（xml文件中为**required**):表示当前方法必须在一个具有事务的上下文中运行，如有客户端有事务在进行，那么被调用端将在该事务中运行，否则的话重新开启一个事务。**（如果被调用端发生异常，那么调用端和被调用端事务都将回滚）**
+- propagation_supports(xml文件中为**supports**）:表示当前方法不必需要具有一个事务上下文，但是如果有一个事务的话，它也可以在这个事务中运行
+- propagation_mandatory(xml文件中为**mandatory**）:表示当前方法必须在一个事务中运行，如果没有事务，将抛出异常
+- propagation_nested(xml文件中为**nested**):表示如果当前方法正有一个事务在运行中，则该方法应该运行在一个嵌套事务中，被嵌套的事务可以独立于被封装的事务中进行提交或者回滚。*如果封装事务存在，并且外层事务抛出异常回滚，那么内层事务必须回滚，反之，内层事务并不影响外层事务。如果封装事务不存在，则同propagation_required的一样*
+- propagation_never（xml文件中为**never**):表示当方法务不应该在一个事务中运行，如果存在一个事务，则抛出异常
+- propagation_requires_new(xml文件中为**requires_new**）:表示当前方法必须运行在它自己的事务中。**一个新的事务将启动，而且如果有一个现有的事务在运行的话，则这个方法将在运行期被挂起，直到新的事务提交或者回滚才恢复执行。**
+- propagation_not_supported（xml文件中为**not_supported**）:表示该方法不应该在一个事务中运行。**如果有一个事务正在运行，他将在运行期被挂起，直到这个事务提交或者回滚才恢复执行**
+
 
 ## Spring的优点
 （1）spring属于低侵入式设计，代码的污染极低；
@@ -106,7 +158,7 @@ bean生命周期可以参考一下Servlet的生命周期：实例化，初始ini
     3、如果这个Bean已经实现了BeanNameAware接口，会调用它实现的setBeanName(String)方法，此处传递的就是Spring配置文件中Bean的id值
     4、如果这个Bean已经实现了BeanFactoryAware接口，会调用它实现的setBeanFactory(BeanFactory)传递的是Spring工厂自身(可以用这个方式来获取其它Bean，只需在Spring配置文件中配置一个普通的Bean就可以)；
     5、如果这个Bean已经实现了**ApplicationContextAware**接口，会调用setApplicationContext(ApplicationContext)方法，传入Spring上下文（同样这个方式也可以实现步骤4的内容，但比4更好，因为ApplicationContext是BeanFactory的子接口，有更多的实现方法）；
-    6、如果这个Bean关联了BeanPostProcessor接口，将会调用postProcessBeforeInitialization(Object obj, String s)方法，BeanPostProcessor经常被用作是Bean内容的更改，并且由于这个是在Bean初始化结束时调用那个的方法，也可以被应用于内存或缓存技术；
+    6、如果这个Bean关联了BeanPostProcessor接口，将会调用postProcessBeforeInitialization(Object obj, String s)方法，**BeanPostProcessor经常被用作是Bean内容的更改(IOC注入代理对象)**，并且由于这个是在Bean初始化结束时调用那个的方法，也可以被应用于内存或缓存技术；
     7、如果Bean在Spring配置文件中配置了init-method属性会自动调用其配置的初始化方法。
     8、如果这个Bean关联了BeanPostProcessor接口，将会调用postProcessAfterInitialization(Object obj, String s)方法、；
     注：以上工作完成以后就可以应用这个Bean了，那这个Bean是一个Singleton的，所以一般情况下我们调用同一个id的Bean会是在内容地址相同的实例，当然在Spring配置文件中也可以配置非Singleton，这里我们不做赘述。
@@ -118,7 +170,7 @@ Spring 容器可以管理 *singleton 作用域*下 bean 的生命周期，在此
 
 ## BeanFactory和ApplicationContext有什么区别
  BeanFactory和ApplicationContext是Spring的两大核心接口，而其中ApplicationContext是BeanFactory的子接口。它们都可以当做Spring的容器，生成Bean实例的，并管理容器中的Bean。
- 1. BeanFactory：是Spring里面最底层的接口，提供了最简单的容器的功能，负责读取bean配置文档，管理bean的加载与实例化，维护bean之间的依赖关系，负责bean的生命周期，但是无法支持spring的aop功能和web应用。
+ 1. BeanFactory：是Spring里面最底层的接口，提供了最简单的容器的功能，负责读取bean配置文档，管理bean的加载与实例化，维护bean之间的依赖关系，负责bean的生命周期，但是*无法支持spring的aop功能和web应用*。
  2. ApplicationContext接口作为BeanFactory的派生，因而具有BeanFactory所有的功能。而且ApplicationContext还在功能上做了扩展，以一种更面向框架的方式工作以及对上下文进行分层和实现继承。
 3. BeanFactroy采用的是延迟加载形式来注入Bean的，即只有在使用到某个Bean时(调用getBean())，才对该Bean进行加载实例化，这样，我们就不能发现一些存在的Spring的配置问题。如果Bean的某一个属性没有注入，BeanFacotry加载后，直至第一次使用调用getBean方法才会抛出异常。
 [引用](https://blog.csdn.net/a745233700/article/details/80959716)
