--- a/网络和数据通信/网络编程.md
+++ b/网络和数据通信/网络编程.md
@@ -1,10 +1,57 @@
-# 网络基础知识
+- [网络基础知识](#%E7%BD%91%E7%BB%9C%E5%9F%BA%E7%A1%80%E7%9F%A5%E8%AF%86)
+  - [分层](#%E5%88%86%E5%B1%82)
+  - [HTTP](#http)
+  - [网络请求产生协议](#%E7%BD%91%E7%BB%9C%E8%AF%B7%E6%B1%82%E4%BA%A7%E7%94%9F%E5%8D%8F%E8%AE%AE)
+  - [get和post区别](#get%E5%92%8Cpost%E5%8C%BA%E5%88%AB)
+  - [HTTPS](#https)
+- [tcp和udp的区别](#tcp%E5%92%8Cudp%E7%9A%84%E5%8C%BA%E5%88%AB)
+- [三次握手](#%E4%B8%89%E6%AC%A1%E6%8F%A1%E6%89%8B)
+- [四次挥手](#%E5%9B%9B%E6%AC%A1%E6%8C%A5%E6%89%8B)
+- [epoll与select的区别](#epoll%E4%B8%8Eselect%E7%9A%84%E5%8C%BA%E5%88%AB)
+- [epoll中et和lt的区别与实现原理](#epoll%E4%B8%ADet%E5%92%8Clt%E7%9A%84%E5%8C%BA%E5%88%AB%E4%B8%8E%E5%AE%9E%E7%8E%B0%E5%8E%9F%E7%90%86)
 
- 
+# 网络基础知识
+[参考](https://www.imooc.com/article/48819)
+## 分层
+[网络体系结构](../java/pic/网络结构分层.png);
+## HTTP
+HTTP（超文本传输协议）是一个基于请求与响应模式的、无状态的、应用层的协议，常基于TCP的连接方式，
+HTTP1.1版本中给出一种持续连接的机制，绝大多数的Web开发，都是构建在HTTP协议之上的Web应用。
+
+http请求由三部分组成，分别是：请求行、消息报头、请求正文
+- 请求报文包含三部分：
+a、请求行：包含请求方法、URI、HTTP版本信息
+b、请求首部字段
+c、请求内容实体
+- 响应报文包含三部分：
+a、状态行：包含HTTP版本、状态码、状态码的原因短语
+b、响应首部字段
+c、响应内容实体
+
+## 网络请求产生协议
+[网络请求产生协议](../java/pic/网络请求产生协议.png)
+## get和post区别
+- 区别一：
+get重点在从服务器上获取资源，post重点在向服务器发送数据；
+- 区别二：
+get传输数据是通过URL请求，以field（字段）= value的形式，置于URL后，并用"?"连接，多个请求数据间用"&"连接，如http://127.0.0.1/Test/login.action?name=admin&password=admin，这个过程用户是可见的；
+post传输数据通过Http的post机制，将字段与对应值封存在请求实体中发送给服务器，这个过程对用户是不可见的；
+- 区别三：
+Get传输的数据量小，因为受URL长度限制，但效率较高；
+Post可以传输大量数据，所以上传文件时只能用Post方式；
+- 区别四：
+get是不安全的，因为URL是可见的，可能会泄露私密信息，如密码等；
+post较get安全性较高；
+- 区别五：
+get方式只能支持ASCII字符，向服务器传的中文字符可能会乱码。
+post支持标准字符集，可以正确传递中文字符。
+## HTTPS
+HTTPS就是HTTP加上加密处理（一般是SSL安全通信线路）+认证+完整性保护
+
 # tcp和udp的区别
 TCP：是面向连接的流传输控制协议，具有高可靠性，确保传输数据的正确性，有验证重发机制，因此不会出现丢失或乱序。
 UDP：是无连接的数据报服务，不对数据报进行检查与修改，无须等待对方的应答，会出现分组丢失、重复、乱序，但具有较好的实时性，UDP段结构比TCP的段结构简单，因此网络开销也小。
-
+[TCPUDP区别.png](../java/pic/TCPUDP区别.png)
 # 三次握手
 
 ![三次握手](../java/pic/三次握手.png)
