--- a/java/线程.md
+++ b/java/线程.md
@@ -21,7 +21,7 @@ http://www.cnblogs.com/dolphin0520/p/3920357.html
     - 阻塞：当一个线程试图获取对象锁（非java.util.concurrent库中的锁，即synchronized），而该锁被其他线程持有，则该线程进入阻塞状态。它的**特点时使用简单，由JVM调度器来决定唤醒自己，而不需要由另一个线程来显示唤醒自己，不响应中断**。
 
     - 等待:当一个线程等待另一个线程通知调度器一个条件时，该线程进入等待状态。他的特点是**需要等待另一个线程显示的唤醒自己，实现灵活，语义更丰富，可响应中断**。例如调用：Object.wait(),Thread.join(),以及等到Lock或Condition。
-  tips：虽然synchronized和JUC里的Lock都是实现锁的功能，但线程进入的状态时不一样的。*synchronized会让线程进入阻塞状态*，而JUC里的Lock时用LockSupport.part()/unpark()来实现阻塞/唤醒的，会让线程进入等待状态。
+  tips：虽然synchronized和JUC里的Lock都是实现锁的功能，但线程进入的状态时不一样的。*synchronized会让线程进入阻塞状态*，而JUC里的Lock时用LockSupport.part()/unpark()来实现阻塞/唤醒的，会让线程进入**等待状态**。
 
 
 ## 1.1 线程生命周期（线程状态转换图）
@@ -31,15 +31,15 @@ http://www.cnblogs.com/dolphin0520/p/3920357.html
 ![线程生命周期状态](./pic/线程生命周期状态.png)
 
 ![线程状态转换图](./pic/线程状态转换图.png)
->> tips:调用ojb.wait()的线程需要先获取monitor，wait()会释放obj的monitor并进入等待状态。所以wait()/notify()都需要和synchronized连用。
+>> tips:调用obj.wait()的线程**需要先获取monitor**，wait()会释放obj的monitor并进入等待状态。所以wait()/notify()都需要和synchronized连用。
   - wait/notify区别
      1. wait() 与 notify/notifyAll 方法必须在同步代码块中使用;
      2. wait() 与  notify/notifyAll() 的执行过程：
-     当线程执行wait()时，会把当前的锁释放，然后让出CPU，进入*等待状态*。
- 当执行notify/notifyAll方法时，会唤醒一个处于等待该 **对象锁** 的线程，然后继续往下执行，直到执行完退出对象锁锁住的区域（synchronized修饰的代码块）后再释放锁。
+       当线程执行wait()时，会把当前的锁释放，然后让出CPU，进入*等待状态*。
+      当执行notify/notifyAll方法时，会唤醒一个处于等待该 **对象锁** 的线程，然后继续往下执行，直到执行完退出对象锁锁住的区域（synchronized修饰的代码块）后再释放锁。S
      3. 中断调用wait()方法进入等待队列的线程;
      4. notify通知的顺序不能错;
-     5. 多线程中测试某个条件的变化用 while轮询;wait()在唤醒后需要再次判断是否符合条件。
+     5. 多线程中测试某个条件的变化用 while轮询;*wait()在唤醒后需要再次判断是否符合条件*。
 
   - sleep()
    sleep相当于让线程睡觉，交出CPU,让CPU去执行其他任务，阻塞当前线程。（**sleep方法不会释放锁**，也就是说如果当前线程持有某个对象的锁，则即使调用sleep方法，其他线程也无法访问这个对象）
@@ -159,7 +159,7 @@ Executors-默认线程池参数
         ArrayBlockingQueue则使用int类型来统计元素
        
   
-1. maximumPoolSize（线程池最大大小）
+3. maximumPoolSize（线程池最大大小）
 线程池允许创建的最大线程数。如果队列满了，并且已创建的线程数小于最大线程数，则线程池会再创建新的线程执行任务。值得注意的是如果使用了无界的任务队列这个参数就没什么效果。
 4. ThreadFactory：用于设置创建线程的工厂
 可以通过线程工厂给每个创建出来的线程设置更有意义的名字，Debug和定位问题时非常有帮助。
