--- a/数据结构和算法/数据结构.md
+++ b/数据结构和算法/数据结构.md
@@ -221,7 +221,7 @@ B\*树定义了非叶子结点关键字个数至少为(2/3)\*M，即块的最低
 
 # 算法
 用的最多的是排序和遍历（树，链表等）
-//todo  排序
+//todo  排序  arrays.sort
 
 目前各种数据库中比较常使用的数据结构就是**B树**、**跳跃表SkipList**、**FST**，对于数据结构来说没有最好的，而是针对于各种业务场景更适合的。
 
