--- a/java/锁.md
+++ b/java/锁.md
@@ -8,6 +8,7 @@
   - [2. 锁的状态](#2-%E9%94%81%E7%9A%84%E7%8A%B6%E6%80%81)
     - [偏向锁、轻量级锁、重量级锁](#%E5%81%8F%E5%90%91%E9%94%81%E8%BD%BB%E9%87%8F%E7%BA%A7%E9%94%81%E9%87%8D%E9%87%8F%E7%BA%A7%E9%94%81)
     - [自旋锁](#%E8%87%AA%E6%97%8B%E9%94%81)
+    - [死锁产生条件](#%E6%AD%BB%E9%94%81%E4%BA%A7%E7%94%9F%E6%9D%A1%E4%BB%B6)
 - [锁的关键字](#%E9%94%81%E7%9A%84%E5%85%B3%E9%94%AE%E5%AD%97)
   - [Synchronized关键字](#synchronized%E5%85%B3%E9%94%AE%E5%AD%97)
   - [Volatile关键字](#volatile%E5%85%B3%E9%94%AE%E5%AD%97)
@@ -66,6 +67,13 @@
 ### 自旋锁
 在Java中，自旋锁是指尝试获取锁的线程不会立即阻塞，而是采用循环的方式去尝试获取锁，这样的好处是减少线程上下文切换的消耗，缺点是循环会消耗CPU。
 例子：http://ifeve.com/java_lock_see1/
+
+### 死锁产生条件
+1. 互斥使用，即当资源被一个线程使用(占有)时，别的线程不能使用
+2. 不可抢占，资源请求者不能强制从资源占有者手中夺取资源，资源只能由资源占用者主动释放
+3. 请求和保持，即当资源的请求者在请求其他的资源的同时保持对原有资源的占有
+4. 循环等待，即存在一个等待队列: P1占有P2的资源，P2占有P3的资源，P3占有P1的资源。
+    这样就形成了一个等待环路。
 
 # 锁的关键字
 在Java中，提供了两种方式来实现同步互斥访问：synchronized和Lock。
