--- a/数据结构和算法/算法.md
+++ b/数据结构和算法/算法.md
@@ -1,3 +1,8 @@
 # 源码
 ## Arrays.sort()
+[流程](../java/pic/arrayssort.png)
+
 [数组排序使用到的算法](https://www.imooc.com/article/45462)
+
+[算法分析](https://mp.weixin.qq.com/s/t0dsJeN397wO41pwBWPeTg)
+
