--- a/框架和组件/框架.md
+++ b/框架和组件/框架.md
@@ -12,6 +12,7 @@
   - [二 Bean生命周期](#%E4%BA%8C-bean%E7%94%9F%E5%91%BD%E5%91%A8%E6%9C%9F)
   - [BeanFactory和ApplicationContext有什么区别](#beanfactory%E5%92%8Capplicationcontext%E6%9C%89%E4%BB%80%E4%B9%88%E5%8C%BA%E5%88%AB)
   - [Spring 框架中都用到了哪些设计模式？](#spring-%E6%A1%86%E6%9E%B6%E4%B8%AD%E9%83%BD%E7%94%A8%E5%88%B0%E4%BA%86%E5%93%AA%E4%BA%9B%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F)
+  - [Spring循环依赖](#spring%E5%BE%AA%E7%8E%AF%E4%BE%9D%E8%B5%96)
 - [SpringMVC](#springmvc)
   - [SpringMVC 简单介绍](#springmvc-%E7%AE%80%E5%8D%95%E4%BB%8B%E7%BB%8D)
   - [SpringMVC 使用](#springmvc-%E4%BD%BF%E7%94%A8)
@@ -184,6 +185,16 @@ Spring 容器可以管理 *singleton 作用域*下 bean 的生命周期，在此
 5. 前端控制器—Spring提供了DispatcherServlet来对请求进行分发。
 6. 视图帮助(View Helper )—Spring提供了一系列的JSP标签，高效宏来辅助将分散的代码整合在视图里。
 7. 依赖注入—贯穿于BeanFactory / ApplicationContext接口的核心理念。
+
+## Spring循环依赖
+循环依赖其实就是循环引用，也就是两个或者两个以上的bean互相持有对方，最终形成闭环。比如A依赖于B，B依赖于C，C又依赖于A。这里不是函数的循环调用，是**对象的相互依赖关系**。循环调用其实就是一个死循环，除非有终结条件。
+
+Spring中循环依赖场景有： 
+（1）构造器的循环依赖 
+（2）field属性的循环依赖
+其中，构造器的循环依赖问题无法解决，只能拋出BeanCurrentlyInCreationException异常，在*解决属性循环依赖时，spring采用的是提前暴露对象的方法*。
+
+https://blog.csdn.net/chejinqiang/article/details/80003868
 
 # SpringMVC
 
