--- a/数据结构和算法/算法.md
+++ b/数据结构和算法/算法.md
@@ -1,6 +1,8 @@
 # 源码
 ## Arrays.sort()
 [流程](../java/pic/arrayssort.png)
+[排序算法汇总](../java/pic/排序算法汇总.png)
+
 
 [数组排序使用到的算法](https://www.imooc.com/article/45462)
 
