--- a/架构和优化/分布式.md
+++ b/架构和优化/分布式.md
@@ -1,4 +1,5 @@
-# 分布式事务：acid
+
+# 事务：acid
 原子性（Atomicity）：是指一个事务要么全部执行，要么完全不执行。
 一致性(Consistency): 事务在开始和结束时，应该始终满足一致性约束。比如系统要求A+B=100,那么事务如果改变了A的数值，则B的数值也要相应修改来满足这样一致性要求；与CAP中的C代表的含义是不同的。
 事务独立（Isolation）：如果有多个事务同时执行，彼此之间不需要知晓对方的存在，而且执行时互不影响，事务之间需要序列化执行，有时间顺序。
@@ -17,3 +18,18 @@ BASE模型包含个三个元素：
 　　BA：Basically Available，基本可用
 　　S：Soft State，软状态，状态可以有一段时间不同步
 　　E：Eventually Consistent，最终一致，最终数据是一致的就可以了，而不是时时保持强一致
+
+# 分布式事务
+https://www.cnblogs.com/savorboard/p/distributed-system-transaction-consistency.html#!comments
+ ## 两端提交
+1. 请求锁-事务
+2. 提交事务
+ ## 补偿事务 TCC
+ Try
+ Confirm
+ Cancel
+ ## 本地消息表
+ db+消息队列
+ ## MQ事务
+
+ ## Sagas事务模型
