--- a/java/线程.md
+++ b/java/线程.md
@@ -18,9 +18,10 @@ http://www.cnblogs.com/dolphin0520/p/3920357.html
   - 上下文切换(context-switching):对于单核CPU来说，CPU在一个时刻只能运行一个线程，当在运行一个线程的过程中转去运行另一个线程，这个就做线程上下文切换。
   
   - 阻塞与等待的区别
-    - 阻塞：当一个线程试图获取对象锁（非java.util.concurrent库中的锁，即synchronized），而该锁被其他线程持有，则该线程进入阻塞状态。它的**特点时使用简单，由JVM调度器来决定唤醒自己，而不需要由另一个线程来显示唤醒自己，不响应中断**。
+    - 阻塞：当一个线程试图获取对象锁（非java.util.concurrent库中的锁，即synchronized），而该锁被其他线程持有，则该线程进入阻塞状态。它的**特点是使用简单，由JVM调度器来决定唤醒自己，而不需要由另一个线程来显示唤醒自己，不响应中断**。
 
-    - 等待:当一个线程等待另一个线程通知调度器一个条件时，该线程进入等待状态。他的特点是**需要等待另一个线程显示的唤醒自己，实现灵活，语义更丰富，可响应中断**。例如调用：Object.wait(),Thread.join(),以及等到Lock或Condition。
+    - 等待:当一个线程等待另一个线程通知调度器一个条件时，该线程进入等待状态。他的特点是**需要等待另一个线程显示的唤醒自己，实现灵活，语义更丰富，可响应中断**。例如调用：Object.wait(),Thread.join(),以及Lock或Condition。
+
   tips：虽然synchronized和JUC里的Lock都是实现锁的功能，但线程进入的状态时不一样的。*synchronized会让线程进入阻塞状态*，而JUC里的Lock时用LockSupport.part()/unpark()来实现阻塞/唤醒的，会让线程进入**等待状态**。
 
 
@@ -36,7 +37,7 @@ http://www.cnblogs.com/dolphin0520/p/3920357.html
      1. wait() 与 notify/notifyAll 方法必须在同步代码块中使用;
      2. wait() 与  notify/notifyAll() 的执行过程：
        当线程执行wait()时，会把当前的锁释放，然后让出CPU，进入*等待状态*。
-      当执行notify/notifyAll方法时，会唤醒一个处于等待该 **对象锁** 的线程，然后继续往下执行，直到执行完退出对象锁锁住的区域（synchronized修饰的代码块）后再释放锁。S
+      当执行notify/notifyAll方法时，会唤醒一个处于等待该 **对象锁** 的线程，然后继续往下执行，直到执行完退出对象锁锁住的区域（synchronized修饰的代码块）后再释放锁。
      3. 中断调用wait()方法进入等待队列的线程;
      4. notify通知的顺序不能错;
      5. 多线程中测试某个条件的变化用 while轮询;*wait()在唤醒后需要再次判断是否符合条件*。
