--- a/java/设计模式.md
+++ b/java/设计模式.md
@@ -1,2 +1,13 @@
 todo
 https://github.com/Snailclimb/JavaGuide/blob/master/Java%E7%9B%B8%E5%85%B3/%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F.md
+
+# Head First 设计模式
+https://blog.csdn.net/d1562901685/article/details/77623237
+1. 策略模式
+P.22
+
+2. 观察者模式
+3. 装饰者模式
+P.106
+4. 
+5. 
