--- a/架构和优化/分布式.md
+++ b/架构和优化/分布式.md
@@ -21,7 +21,7 @@ BASE模型包含个三个元素：
 
 # 分布式事务
 https://www.cnblogs.com/savorboard/p/distributed-system-transaction-consistency.html#!comments
- ## 两端提交
+ ## 两段提交
 1. 请求锁-事务
 2. 提交事务
  ## 补偿事务 TCC
@@ -33,3 +33,5 @@ https://www.cnblogs.com/savorboard/p/distributed-system-transaction-consistency.
  ## MQ事务
 
  ## Sagas事务模型
+
+[分布式事务学习](https://blog.csdn.net/qq_27384769/article/details/79302497)
