--- a/架构和优化/分布式.md
+++ b/架构和优化/分布式.md
@@ -21,16 +21,17 @@ BASE模型包含个三个元素：
 
 # 分布式事务
 https://www.cnblogs.com/savorboard/p/distributed-system-transaction-consistency.html#!comments
- ## 两段提交
-1. 请求锁-事务
-2. 提交事务
+ ## 两段提交--2PC
+1. prepare-请求锁-事务
+2. commit-提交事务
  ## 补偿事务 TCC
- Try
- Confirm
- Cancel
+ Try：预留业务资源
+ Confirm:确认执行业务操作，执行事务
+ Cancel取消执行业务操作
  ## 本地消息表
  db+消息队列
  ## MQ事务
+事务消息可以确保本地执行事务与消息发送是原子的：先发送一条消息到消息中间件，然后执行本地事务，当本地事务成功后再发送提交确认到消息中间件，然后这条消息才能被其他业务消费者所能感知，从而确保原子性。
 
  ## Sagas事务模型
 
