--- a/架构和优化/分布式.md
+++ b/架构和优化/分布式.md
@@ -1,12 +1,12 @@
 
 # 事务：acid
 原子性（Atomicity）：是指一个事务要么全部执行，要么完全不执行。
-一致性(Consistency): 事务在开始和结束时，应该始终满足一致性约束。比如系统要求A+B=100,那么事务如果改变了A的数值，则B的数值也要相应修改来满足这样一致性要求；与CAP中的C代表的含义是不同的。
+一致性(Consistency): 事务在开始和结束时，**应该始终满足一致性约束**。比如系统要求A+B=100,那么事务如果改变了A的数值，则B的数值也要相应修改来满足这样一致性要求；与CAP中的C代表的含义是不同的。
 事务独立（Isolation）：如果有多个事务同时执行，彼此之间不需要知晓对方的存在，而且执行时互不影响，事务之间需要序列化执行，有时间顺序。
 持久性(Durability)：事务的持久性是指事务运行成功以后，对系统状态的更新是永久的，不会无缘无故回滚撤销。
 
 # CAP理论：
-C：Consistency，一致性, 数据一致更新，所有数据变动都是同步的
+C：Consistency，一致性, **数据一致更新**，所有数据变动都是同步的
 A：Availability，可用性, 好的响应性能，完全的可用性指的是在任何故障模型下，服务都会在有限的时间处理响应
 P：Partition tolerance，分区容错性，可靠性
 
