--- a/架构和优化/架构文章.md
+++ b/架构和优化/架构文章.md
@@ -2,3 +2,5 @@ https://www.cnblogs.com/shanyou/p/5048099.html?utm_source=tuicool&utm_medium=ref
 
 [微服务架构设计]https://blog.csdn.net/beyondself_77/article/details/79841455
 https://www.cnblogs.com/imyalost/p/6792724.html
+
+架构设计优化出发点：cpu，内存，io，网络
