--- a/架构和优化/性能调优.md
+++ b/架构和优化/性能调优.md
@@ -88,3 +88,6 @@ jmap
 http://www.importnew.com/27436.html
 
 https://blog.csdn.net/cool_summer_moon/article/details/80500439
+
+# 线上服务定位插件Btrace
+https://blog.csdn.net/ZYC88888/article/details/81662671
