--- a/数据结构和算法/数据结构和算法阅读记录.md
+++ b/数据结构和算法/数据结构和算法阅读记录.md
@@ -1,5 +1,5 @@
-第一章
-1.数据结构包括：数组，链表，栈，二叉树，哈希表等等
+# 第一章
+## 1.数据结构包括：数组，链表，栈，二叉树，哈希表等等
 表1.1 数据机构的特性
 | 数据结构 | 优点 | 缺点 |
 | ------ | ------ | ------ |
@@ -16,5 +16,21 @@
 | 图 | 对现实世界建模 | 有些算法慢且复制 |
 数据结构处理数组之外都可以被认为时抽象数据结构（ADT）
 
-第二章 数组
-有序数组适用于频繁查询，不适用于频繁删除和插入
+# 第二章 数组
+* 表2.5 用大O表示法表示运行时间
+
+| 算法 | 大O表示法表示的时间 |
+| ------ | ------ | ------ |
+| 线程查找 | O(N) |
+| 二分查找 | O(logN) |
+| 无序数组的插入 | O(1) |
+| 有序数组的插入 | O(N) |
+| 无序数组的删除 | O(N) |
+| 有序数组的删除 | O(N) |
+
+小结：
+- 无序数组可以提供快速的插入，但查找和删除较慢
+- 有序数组可以使用二分查找，查找较快
+
+# 第三章 简单排序
+## 
