--- a/java/设计模式.md
+++ b/java/设计模式.md
@@ -1,13 +1,25 @@
 todo
 https://github.com/Snailclimb/JavaGuide/blob/master/Java%E7%9B%B8%E5%85%B3/%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F.md
 
+# 面向对象设计原则
+https://www.cnblogs.com/pony1223/p/7594803.html
+
 # Head First 设计模式
 https://blog.csdn.net/d1562901685/article/details/77623237
-1. 策略模式
+1. 策略模式（Strategy Pattern）
 P.22
+封装，多态的使用
+定义：
+策略模式定义了算法族，分布封装起来，让他们之间可以互相替换，此模式让算法的变化独立于使用算法的客户。
 
-2. 观察者模式
-3. 装饰者模式
+2. 观察者模式(Observer Pattern)
+使用生产者消费者模式--主题-订阅
+定义：
+观察者模式定义了对象之间的一对多的依赖，这样一来，当一个对象改变状态时，它的所有依赖者都会收到通知并自动更新
+
+3. 装饰者模式（Decorate Pattern）
 P.106
+定义：
+装饰着模式动态的将责任附加到对象上。若要扩展功能，装饰者提供了比继承更有弹性的替代方案。
 4. 
 5. 
