--- a/数据结构和算法/数据结构和算法阅读记录.md
+++ b/数据结构和算法/数据结构和算法阅读记录.md
@@ -33,4 +33,61 @@
 - 有序数组可以使用二分查找，查找较快
 
 # 第三章 简单排序
-## 
+算法的稳定性：
+如果具有相同关键字的数据项，经过排序它们的顺序保持不变，这样的排序就是稳定的。
+
+P.52
+## 冒泡排序：效率最低，一般不考虑使用
+ 默认最大的值移动到最右边，最右边的就是有序的
+ 整体时间复杂度：O(N^2)
+```java
+public void bubbleSort() {
+            int out, in;
+            for (out = nElems - 1; out > 0; out--) {//outer loop(backward)
+                for (in = 0; in < out; in++) {//inner loop(forward)
+                    if (array[in] > array[in + 1]) {//out of order?
+                        swap(in, in + 1);//swap them
+                    }
+                }
+            }
+        }
+```
+
+## 选择排序:数据量小，交换数据耗时大于比较数据耗时，可以考虑
+默认最小的值移动到最左边，默认左边的是有序的
+整体时间复杂度：O(N^2)
+相比较冒泡排序，选择排序交换次数为n（冒泡排序交换次数：n^2）
+```java public void selectionSort() {
+            int out, in, min;
+            for (out = 0; out < nElems - 1; out++) {//outer loop
+                min = out;//minimum
+                for (in = out + 1; in < nElems; in++) {//inner loop
+                    if (array[in] < array[min]) {//if min greater
+                        min = in;//we have a new min
+                    }
+                }
+                swap(out, min);//swap them
+            }
+        }
+```
+
+## 插入排序：数据量比较小或基本上有序时考虑使用
+默认比outer变量下标号小的数据项都是局部有序的
+对于随机数据的插入排序，时间复杂度：O(N^2)
+对于已经有序或基本有序的数据来说，时间复杂度：O(N)
+
+ 复制的次数大致等于比较的次数。然而一次复制与一次交换的时间耗费不同（复制小于交换）， 所以相对于随机数据，这个算法比冒泡排序快一倍，比选择排序略快。
+```java
+        public void insertSort() {
+            int in, outer;
+            for (outer = 1; outer < nElems; outer++) {//outer is dividing line
+                int temp = array[outer];//remove marked item
+                in = outer;//start shifts at outer
+                while (in > 0 && array[in - 1] > temp) {//until one is smaller
+                    array[in] = array[in - 1];//shift item to right
+                    --in;//左移下标 go left one position
+                }
+                array[in] = temp;//insert marked item
+            }
+        }
+```
