--- a/网络和数据通信/网络编程.md
+++ b/网络和数据通信/网络编程.md
@@ -1,6 +1,15 @@
 - [网络基础知识](#%E7%BD%91%E7%BB%9C%E5%9F%BA%E7%A1%80%E7%9F%A5%E8%AF%86)
   - [分层](#%E5%88%86%E5%B1%82)
-  - [HTTP](#http)
+    - [五层协议的体系架构](#%E4%BA%94%E5%B1%82%E5%8D%8F%E8%AE%AE%E7%9A%84%E4%BD%93%E7%B3%BB%E6%9E%B6%E6%9E%84)
+      - [1.应用层(application layer)](#1%E5%BA%94%E7%94%A8%E5%B1%82application-layer)
+        - [域名系统（Domain Name System缩写DNS）](#%E5%9F%9F%E5%90%8D%E7%B3%BB%E7%BB%9Fdomain-name-system%E7%BC%A9%E5%86%99dns)
+        - [HTTP协议](#http%E5%8D%8F%E8%AE%AE)
+      - [2.运输层(transport layer)](#2%E8%BF%90%E8%BE%93%E5%B1%82transport-layer)
+        - [传输控制协议TCP(Transmisson Control Protocol) --提供面向连接的，可靠的数据传输服务。](#%E4%BC%A0%E8%BE%93%E6%8E%A7%E5%88%B6%E5%8D%8F%E8%AE%AEtcptransmisson-control-protocol---%E6%8F%90%E4%BE%9B%E9%9D%A2%E5%90%91%E8%BF%9E%E6%8E%A5%E7%9A%84%E5%8F%AF%E9%9D%A0%E7%9A%84%E6%95%B0%E6%8D%AE%E4%BC%A0%E8%BE%93%E6%9C%8D%E5%8A%A1)
+        - [用户数据协议UDP(User Datagram Protocol) -- 提供无连接的，尽最大努力的数据传输服务（不保证数据传输的可靠性）](#%E7%94%A8%E6%88%B7%E6%95%B0%E6%8D%AE%E5%8D%8F%E8%AE%AEudpuser-datagram-protocol----%E6%8F%90%E4%BE%9B%E6%97%A0%E8%BF%9E%E6%8E%A5%E7%9A%84%E5%B0%BD%E6%9C%80%E5%A4%A7%E5%8A%AA%E5%8A%9B%E7%9A%84%E6%95%B0%E6%8D%AE%E4%BC%A0%E8%BE%93%E6%9C%8D%E5%8A%A1%E4%B8%8D%E4%BF%9D%E8%AF%81%E6%95%B0%E6%8D%AE%E4%BC%A0%E8%BE%93%E7%9A%84%E5%8F%AF%E9%9D%A0%E6%80%A7)
+      - [3 网络层(network layer)](#3-%E7%BD%91%E7%BB%9C%E5%B1%82network-layer)
+      - [4 数据链路层(data link layer)](#4-%E6%95%B0%E6%8D%AE%E9%93%BE%E8%B7%AF%E5%B1%82data-link-layer)
+      - [5 物理层(physical layer)](#5-%E7%89%A9%E7%90%86%E5%B1%82physical-layer)
   - [网络请求产生协议](#%E7%BD%91%E7%BB%9C%E8%AF%B7%E6%B1%82%E4%BA%A7%E7%94%9F%E5%8D%8F%E8%AE%AE)
   - [get和post区别](#get%E5%92%8Cpost%E5%8C%BA%E5%88%AB)
   - [HTTPS](#https)
@@ -14,8 +23,16 @@
 [参考](https://www.imooc.com/article/48819)
 ## 分层
 [网络体系结构](../java/pic/网络结构分层.png);
-## HTTP
-HTTP（超文本传输协议）是一个基于请求与响应模式的、无状态的、应用层的协议，常基于TCP的连接方式，
+### 五层协议的体系架构
+#### 1.应用层(application layer)
+**应用层的任务是通过应用进程间的交互来完成特定网络应用**。应用层协议定义的是应用进程（进程：主机中正在进行的程序）间的通信和交互的规则。在互联网中应用层协议很多，如：**域名系统DNS**, 支持万维网应用的**HTTP协议**，支持电子邮件的**SMTP协议**等等。
+
+##### 域名系统（Domain Name System缩写DNS）
+域名系统是因特网的一项核心服务，它作为可以将域名和IP地址相互映射的一个分布式数据库，能够使人更方便的访问互联网，而不用去记住能够被机器直接读取的IP数串。
+
+##### HTTP协议
+超文本传输协议(HTTP：HyperText Transfer Protocol）是互联网上应用最为广泛的一种网络协议。所有的WWW文件都是必须遵守这个标准。
+HTTP协议是一个基于请求与响应模式的、无状态的、应用层的协议，常基于TCP的连接方式，
 HTTP1.1版本中给出一种持续连接的机制，绝大多数的Web开发，都是构建在HTTP协议之上的Web应用。
 
 http请求由三部分组成，分别是：请求行、消息报头、请求正文
@@ -27,6 +44,40 @@ c、请求内容实体
 a、状态行：包含HTTP版本、状态码、状态码的原因短语
 b、响应首部字段
 c、响应内容实体
+
+#### 2.运输层(transport layer)
+**运输层的主要任务就是负责向两台主机进程之间的通信提供通用的数据传输服务。**
+应用进程利用该服务传送应用层报文。所谓复用就是指多个应用层进程可同时使用下面运输层的服务，所谓分用是传输层把收到的信息分别交付上面应用层中的相应进程。
+运输层主要使用一下两种协议
+##### 传输控制协议TCP(Transmisson Control Protocol) --提供面向连接的，可靠的数据传输服务。
+- TCP的主要特点：
+  1. TCP是面向连接的；（就好像打电话一样，通话前需要先拨号建立连接，通话结束后要挂机释放连接）
+  2. 每一条TCP连接只能有两个端点，每一条TCP连接只能是点对点的（一对一）；
+  3. TCP提供可靠交付的服务。通过TCP连接传送的数据，无差错，不丢失，不重复，并且按序到达；
+  4. TCP提供全双工通信。TCP允许通信双方的应用进程在任何时候都能发送数据。TCP连接的两端都设有发送缓存和接收缓存，用来临时存放双方通信的数据；
+  5. 面向字节流。TCP中的"流"（stream）值的是流入进程或从进程流出的字节序列。"面向字节流"的含义是：虽然应用程序和TCP的交互寺一次一个数据块（大小不等），但TCP把应用程序交下来的数据仅仅看成是一连串的无结构的字节流。
+
+##### 用户数据协议UDP(User Datagram Protocol) -- 提供无连接的，尽最大努力的数据传输服务（不保证数据传输的可靠性）
+- UDP的主要特点：
+  1. UDP是无连接的；
+  2. UDP使用尽最大努力交付，即不保证可靠交付，因此主机不需要维持复杂的连接状态（这里面有许多参数）；
+  3. UDP是面向报文的；
+  4. UDP没有阻塞控制，因此网络出现拥塞不会使源主机的发送效率降低（对实时应用很有用，如IP电话，实时视频会议等）；
+  5. UDP支持一对一，一对多，多对一和多对多的交互通信；
+  6. UDP的首都开销小，只有8个字节，比TCP的20字节的首部要短。
+
+#### 3 网络层(network layer)
+**网络层负责为分组交换网上的不同主机提供通信服务**。在发送数据时，网络层把运输层产生的报文段或用户数据封装成分组和包进行传送。在**TCP/IP体系机构**中，由于网络层使用**IP协议**，因此分组也叫IP数据报，简称**数据报**
+tips:**不要把运输层的“用户数据报UDP”和网络层的“IP数据报”弄混**。
+网络层另一个任务就是选择合适的路由，使源主机传输层所传下来的分组，能通过网络层中的路由器找到目的主机。
+互联网使用的网络层协议是无连接的网际协议（Intert Prococol）和许多路由选择协议，因此互联网的网络层也叫做**网际层或IP层**。
+
+#### 4 数据链路层(data link layer)
+**数据链路层通常简称为链路层。两台主机之间的数据传输，总是在一段一段的链路上传送的，这就是需要使用专门的链路层的协议**。 在两个相邻节点之间传送数据时，**数据链路层将网络层交下来的IP数据报组装成帧**，在两个相邻节点间的链路上传送帧。每一帧包括数据和必要的控制信息（如同步信息，地址信息，差错控制等）。
+
+#### 5 物理层(physical layer)
+在物理层上所传送的数据单位是比特。
+**物理层的作用是实现相邻计算机节点之间比特流的透明传送，尽可能屏蔽掉具体传输介质和物理设备的差异**。
 
 ## 网络请求产生协议
 [网络请求产生协议](../java/pic/网络请求产生协议.png)
