完善位运算

--- a/操作系统/操作系统.md
+++ b/操作系统/操作系统.md
@@ -1,13 +1,97 @@
 # 基本概念
 ## 计算机组成原理
+//todo
 
+## 计算机编码
+
+>>> 原码，反码，补码的产生过程，就是为了解决，计算机做减法和引入符号位（正号和负号）的问题。
+
+### 原码：是最简单的机器数表示法。**用最高位表示符号位，‘1’表示负号，‘0’表示正号**。其他位存放该数的二进制的绝对值。
+>>> 1010: 最高位为‘1’,表示这是一个负数，其他三位为‘010’，即(0*2^2)+（(1*2^1)+(0*2^0)=2（‘^’表示幂运算符）所以1010表示十进制数（-2）。
+
+### 反码:正数的反码还是等于原码,负数的反码就是他的原码除符号位外，按位取反。
+* 反码，实际上是这个数对于一个模的同余数
+
+>>> 3是正数，反码与原码相同，则可以表示为0011, -3的原码是1011，符号位保持不变，低三位（011）按位取反得（100）,所以-3的反码为1100
+
+### 补码:正数的补码等于他的原码; 负数的补码等于反码+1(负数的补码等于他的原码自低位向高位，尾数的第一个‘1’及其右边的‘0’保持不变，左边的各位按位取反，符号位不变。)。
+
+6是正数，
+源码: 0000 0110
+反码: 0000 0110
+补码：0000 0110
+
+-6是负数，
+源码: 1000 0110
+反码: 1111 1001
+(负数的补码等于他的**原码自低位向高位**，尾数的第一个‘1’及其右边的‘0’保持不变，左边的各位按位取反，符号位不变。)
+补码： 1111 1010
 
 ## 位运算
-(https://blog.csdn.net/u012316953/article/details/52414362)
-原码：一个正数
-反码
-补码
-//todo
+1. 正数没有列外，在计算机中以原码标识
+2. 负数不同了，在计算机中，**负数以原码的补码**形式表达。
+
+- 位运算符：左移( << )、右移( >> ) 、无符号右移( >>> ) 、位与( & ) 、位或( | )、位非( ~ )、位异或( ^ )，除了位非( ~ )是一元操作符外，其它的都是二元操作符。
+
+1. 左移(<<)
+将5左移2位：
+首先会将5转为2进制表示形式(java中，整数默认就是int类型,也就是32位):
+
+0000 0000 0000 0000 0000 0000 0000 0101           然后左移2位后，低位补0：
+
+0000 0000 0000 0000 0000 0000 0001 0100           换算成10进制为20
+
+2. 右移(>>)
+还是先将5转为2进制表示形式： 
+
+0000 0000 0000 0000 0000 0000 0000 0101 然后右移2位，**高位补0**：
+
+**00**00 0000 0000 0000 0000 0000 0000 0001
+
+3. 无符号右移(>>>)
+5的二进制： 0000 0000 0000 0000 0000 0000 0000 0101
+
+5右移3位后结果为0，0的二进制为： 
+0000 0000 0000 0000 0000 0000 0000 0000        // (用0进行补位)
+
+-5换算成二进制： 1111 1111 1111 1111 1111 1111 1111 1011
+
+-5右移3位后结果为-1，-1的二进制为： 
+1111 1111 1111 1111 1111 1111 1111 1111(补码形式)   // (用1进行补位)
+
+-5**无符号**右移3位后的结果 536870911 换算成二进制： 
+0001 1111 1111 1111 1111 1111 1111 1111   // (**用0进行补位**)
+
+tips:1. 正数右移，高位用0补;负数右移，高位用1补;当负数使用无符号右移时，用0进行部位(自然而然的，就由负数变成了正数了)。 2. 正数或者负数左移，低位都是用0补.
+
+4. 位与(&)
+5 位与 3：
+5转换为二进制：0000 0000 0000 0000 0000 0000 0000 0101
+3转换为二进制：0000 0000 0000 0000 0000 0000 0000 0011
+位与操作后：   0000 0000 0000 0000 0000 0000 0000 0001
+
+两个相对**位上**的操作数，如果都是1，那么结果也为1，否则为0.
+
+5. 位或(|)
+5转换为二进制：0000 0000 0000 0000 0000 0000 0000 0101
+3转换为二进制：0000 0000 0000 0000 0000 0000 0000 0011
+位或后二进制： 0000 0000 0000 0000 0000 0000 0000 0111
+
+两个相对**位上**的操作数，如果**只要有**一个为1，那么结果为1，否则为0.
+
+
+6. 位异或(|)
+5转换为二进制：0000 0000 0000 0000 0000 0000 0000 0101
+3转换为二进制：0000 0000 0000 0000 0000 0000 0000 0011
+位异或后二进制:0000 0000 0000 0000 0000 0000 0000 0110
+
+两个相对**位上**的操作数，如果两个数相反，那么结果为1，否则为0.
+
+7. 位非(~)
+5转换为二进制：0000 0000 0000 0000 0000 0000 0000 0101
+位非后二进制： 1111 1111 1111 1111 1111 1111 1111 1010
+
+该位上的操作数为1，那么位非结果为0；如果操作数为0，那么位非结果为1；
 
 # 基本操作命令
 dstat:监控系统资源
