第四章记录

--- a/数据结构和算法/数据结构和算法阅读记录.md
+++ b/数据结构和算法/数据结构和算法阅读记录.md
@@ -91,3 +91,31 @@ public void bubbleSort() {
             }
         }
 ```
+
+
+# 第四章 栈和队列
+
+## 栈
+栈是一种**先进后出（FILO）**的数据结构，数组和链表都可以生成栈。
+允许插入和删除的一端称为栈顶（top），另一端称为栈底（bottom）；
+* 栈的效率：数据项入栈和出栈时间复杂度都为O(1)
+
+
+## 队列
+队列是一种先进先出（FIFO：插入数据到队尾，队头删除数据）的数据结构，数组和链表也都可以生成队列。
+当数据进入到队列中时加入到队尾（tail/rear），但是出队列的时候是从头端（head/front）取数据。
+* 队列的效率：插入数据项和移除数据项时间复杂度都为O(1)
+
+* 循环队列
+  - 环绕式处理
+  为了避免队列不满却不能插入新数据项的问题，可以让队头队尾指针绕回到数据开始的位置，这就是循环队列
+
+  - 判断队列是否有环：基于链表实现，“快慢指针”的方法，参考链表部分
+
+* 双向队列
+
+* 优先级队列
+基于数组实现的优先级队列，插入操作需要O(N)的时间，删除操作则需要O(1)的时间
+
+# 第五章 链表
+
