--- a/数据结构和算法/算法.md
+++ b/数据结构和算法/算法.md
@@ -1,10 +1,16 @@
 # 源码
 ## Arrays.sort()
 [流程](../java/pic/arrayssort.png)
-[排序算法汇总](../java/pic/排序算法汇总.png)
-
-
 [数组排序使用到的算法](https://www.imooc.com/article/45462)
+
+## 排序
+[排序算法汇总](../java/pic/排序算法汇总.png)
 
 [算法分析](https://mp.weixin.qq.com/s/t0dsJeN397wO41pwBWPeTg)
 
+### 插入排序
+### 快速排序
+### 归并排序
+
+## 遍历
+### 二叉树遍历-前序，中序，后序
