--- a/操作系统/操作系统.md
+++ b/操作系统/操作系统.md
@@ -113,6 +113,17 @@ jstack -l pid
 * 分析jvm内存：
  jmap -histo:live [pid], jmap -dump:live [pid]
 
+关于 class name 对象类型说明:
+B  byte
+C  char
+D  double
+F  float
+I  int
+J  long
+Z  boolean
+[  数组，如[I表示int[]
+[L+类名 其他对象
+
 * 查看日志：
 tail ,head,cat,grep,less(查看大文件)
 
