--- a/网络和数据通信/网络编程.md
+++ b/网络和数据通信/网络编程.md
@@ -100,6 +100,8 @@ post支持标准字符集，可以正确传递中文字符。
 ## HTTPS
 HTTPS就是HTTP加上加密处理（一般是SSL安全通信线路）+认证+完整性保护
 
+[tcp,udp,http.socket]https://www.cnblogs.com/chengzhengfu/p/4584510.html
+
 # tcp和udp的区别
 TCP：是面向连接的流传输控制协议，具有高可靠性，确保传输数据的正确性，有验证重发机制，因此不会出现丢失或乱序。
 UDP：是无连接的数据报服务，不对数据报进行检查与修改，无须等待对方的应答，会出现分组丢失、重复、乱序，但具有较好的实时性，UDP段结构比TCP的段结构简单，因此网络开销也小。
