--- a/架构和优化/微服务.md
+++ b/架构和优化/微服务.md
@@ -33,6 +33,7 @@
 ## REST
 http，https
 ## RPC
+//todo 可以重点学习下rpc
 
 # 微服务开发常用框架
 https://www.cnblogs.com/xishuai/archive/2018/04/13/dubbo-and-spring-cloud.html
@@ -43,12 +44,12 @@ https://www.cnblogs.com/xishuai/archive/2018/04/13/dubbo-and-spring-cloud.html
 - 基于 Spring Boot
 - 云服务、分布式框架集合（众多）
 ### 核心功能
-- 分布式/版本化配置----Config
-- 服务注册和发现----Netflix Eureka
-- 路由----Netflix Zuul 网关
-- 服务和服务之间的调用----Bus 消息总线
-- 负载均衡----Netflix Ribbon
-- 断路器----Netflix Hystrix 
+- 分布式/版本化配置（configuration management）----Config
+- 服务注册和发现（service discovery）----Netflix Eureka/Consul
+- 路由(intelligent routing)----Netflix Zuul 网关
+- 消息总线（control bus）：服务和服务之间的调用---Bus 消息总线
+- 负载均衡（load balance）----Netflix Ribbon/Feign
+- 断路器(circuit breakers)----Netflix Hystrix 
 - 分布式消息传递----Stream 消息组件   
 
 
