更新脚本部分

--- a/操作系统/操作系统.md
+++ b/操作系统/操作系统.md
@@ -138,8 +138,31 @@ man页面一般可以分为8种命令类型
 7. 环境、表、宏系统管理员命令和后台运行命令
 
 # Shell脚本
+//todo
 awk:读文件
+读取ini配置文件，demo:
+function ReadIniFile()
+{
+    Key=$1
+    Section=$2
+    ConfigFile=$3
+    ReadIni=`awk -F '=' '/\['$Section'\]/{a=1}a==1&&$1~/'$Key'/{print $2;exit}' $CofigFile`
+    echo "$ReadIni"
+}
+
 sed替换值
+1. 普通替换单行
+sed -i 's/"username":.*/"username":'\"$namevalue\"' /g' $configpath
+2. 多行替换
+sed -i ':a;&!{N;ba};s/"keyname":\s*\[.*\]/"keyname":'$name'/' $configpath
+3. 在匹配字符后插入一行
+在host后插入一行-ports
+sed -i '/"host":/a\'\"$ports\":$portsvalue'' $configpath
+4. 替换目的字符串包括斜线，使用其它分隔符---?
+sed -i 's?"dir":.*?"dir":'\"$newdir\"'?g' $configpath
+5. url包含特殊字符，使用通用分隔符---#
+sed -i 's#jdbc_url=.*#jdbc_url='$dbUrl'#g' $configpath
+
 
 # 网络：
 netstat命令用来打印网络连接状况、系统所开放端口、路由表等信息
