新增记录行

--- a/架构和优化/性能调优.md
+++ b/架构和优化/性能调优.md
@@ -43,6 +43,9 @@ FGC、FGCT：Full GC次数和Full GC耗时
 GCT：GC总耗时
 
 4. Linux命令监控服务器性能:
+https://www.imooc.com/article/26725
+[Centos下的IO监控与分析](https://www.cnblogs.com/zengkefu/p/5639111.html)
+
 * iostat:iostat用于监视CPU使用率和I/O系统，
 常见用法
 iostat -d -k 1 10        #查看TPS和吞吐量信息
@@ -91,3 +94,9 @@ https://blog.csdn.net/cool_summer_moon/article/details/80500439
 
 # 线上服务定位插件Btrace
 https://blog.csdn.net/ZYC88888/article/details/81662671
+
+# 压力测试Jmeter
+
+# 文件搜索工具
+everything  
+filelocator
