--- a/java/锁.md
+++ b/java/锁.md
@@ -82,7 +82,7 @@
   - 原理:从反编译获得的字节码可以看出，synchronized代码块实际上多了monitorenter和monitorexit两条指令。monitorenter指令执行时会让对象的锁计数加1，而monitorexit指令执行时会让对象的锁计数减1，其实这个与操作系统里面的PV操作很像，操作系统里面的PV操作就是用来控制多个线程对临界资源的访问。
 
   - 在Java中，每一个对象都拥有一个锁标记（monitor），也称为监视器，多线程同时访问某个对象时，线程只有获取了该对象的锁才能访问。
-  所谓**对象锁**，就是synchronized 给某个对象加锁。
+  所谓**对象锁**，就是synchronized 给某个**对象**加锁。
 
   - 特点
   1. MyObject类中定义有多个synchronized修饰的实例方法时，若多个线程拥有同一个MyObject类的对象，则这些方法只能以同步的方式执行。即，执行完一个synchronized修饰的方法后，才能执行另一个synchronized修饰的方法。
@@ -164,6 +164,7 @@
   2. Lock和synchronized有一点非常大的不同，采用synchronized不需要用户去手动释放锁，当synchronized方法或者synchronized代码块执行完之后，系统会自动让线程释放对锁的占用；而Lock则必须要用户去手动释放锁，如果没有主动释放锁，就有可能导致出现死锁现象。
    
 ## Synchronized 和ReentrantLock区别
+[不可不说的Java“锁”事](https://tech.meituan.com/2018/11/15/java-lock.html)
 **两者都是可重入锁**
 
 1. 锁的实现
